@@ -2,6 +2,8 @@ Changes since 0.2.8.3.x:
 - Added detection and reaction code for timing assist bots
 - /shuffle now works before you actually join a team
 - Implemented /shout command and associated settings
+- Fixed suspension and silenced status not being re-applied after a player
+  disconnects and rejoins a server.
 - Tweaks to enemy influence system.
 - Ingame menu and console now are drawn on top of a semi-transparent,
   darkened area for increased readability.
